# fa-training-labs-alumnos

./: README.md
Bloque01/Sesión01/: quiz.md
Sesión01/lab01-inicial/: README.md
Sesión02/ejemplos/: validpydantic.py  validpydantic2.py
Sesión02/lab03-grpc-event-driven-base/: Makefile
Sesión03/T4/: error_handlers.py
Sesión03/lab03-fastapi-grpc-todo/: Makefile
Sesión04/tema5/: README_LAB4.md  sample1.py
Sesión04/tema6/: LAB6.md
Sesión07/: manual_minikube.md
Sesión08/: test.db
Sesión08/parkwise_project_iter01/identity/: main.py  pyproject.toml  requirements.txt
Sesión08/parkwise_project_iter01/identity/.github/workflows/: ci.yml
Sesión08/parkwise_project_iter01/identity/app/application/ports/inbound/: auth_service_port.py
Sesión08/parkwise_project_iter01/identity/app/application/ports/outbound/: user_repository_port.py
Sesión08/parkwise_project_iter01/identity/app/application/services/: auth_service.py
Sesión08/parkwise_project_iter01/identity/app/domain/models/: user.py
Sesión08/parkwise_project_iter01/identity/app/domain/services/: user_hasher.py
Sesión08/parkwise_project_iter01/identity/app/infrastructure/repositories/: user_repository.py
Sesión08/parkwise_project_iter01/identity/app/interfaces/dependencies/: jwt_auth.py
Sesión08/parkwise_project_iter01/identity/app/interfaces/routes/: auth.py
Sesión08/parkwise_project_iter01/identity/app/interfaces/schemas/: schemas.py
Sesión08/parkwise_project_iter01/identity/k8s/: identity-deployment.yaml  identity-service.yaml
Sesión08/parkwise_project_iter01/identity/tests/: test_auth.py
(+358 files in other folders)
